# ruby

./: AUTHORS  LEGAL  Makefile.am  README  README.ja  configure.ac  configure.in  dln.c  file.c  util.c
build-aux/: git-version-gen
ext/openssl/: ossl_ssl.c
wince/: io_wce.c
